--- a/src/app/componentes/nova-transacao/nova-transacao.component.html
+++ b/src/app/componentes/nova-transacao/nova-transacao.component.html
@@ -1,1 +1,38 @@
+<main class="form-wrapper">
+  <form class="form" (ngSubmit)="aoSubmeter()" ngNativeValidate>
+    <h2 class="titulo">Nova Transação</h2>
 
+    <div class="campos">
+
+      <label class="campo-grupo">
+        Transação
+        <div class="select-wrapper">
+          <select name="tipo-transacao"
+                  class="campo select-tipo-transacao"
+                  [(ngModel)] = "tipoTransacao"
+                  required>
+            <option value="" selected disabled>Selecione o tipo de transação</option>
+            <option value="deposito">Depósito</option>
+            <option value="saque">Saque</option>
+          </select>
+        </div>
+      </label>
+
+      <label class="campo-grupo">
+        Valor
+        <div class="input-wrapper">
+          <input type="number"
+                 name="valor"
+                 class="campo input-valor-transacao"
+                 min="0.01"
+                 step="0.01"
+                 required
+                 placeholder="00,00"
+                 [(ngModel)]="valorTransacao">
+        </div>
+      </label>
+
+      <button class="botao-confirmar-transacao">Confirmar Transação</button>
+    </div>
+  </form>
+</main>
