--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,11 @@
   --cinza-escuro: #8B8B8B;
   --cinza-medio: #A6A6A6;
   --cinza: #CBCBCB;
-  --azul-destaques: #90DDFF;
-  --azul-hover: #5CC0ED;
-  --azul-pressionado: #30A7DC;
-  --gradiente-azul: linear-gradient(180deg, #FFF 0%, #33728f 100%);
-  --fundo-azul-claro: #F2FBFF;
+  --azul-destaques: #61c0c4c0;
+  --azul-hover: #73e0eeab;
+  --azul-pressionado: #3fe7ec4b;
+  --gradiente-azul: linear-gradient(180deg, #FFF 0%, #52acaff8 100%);
+  --fundo-azul-claro: #82d5d849;
   --fundo-cinza-claro: #F5F5F5;
 }
 
