--- a/src/app/componentes/banner/conta/conta.component.html
+++ b/src/app/componentes/banner/conta/conta.component.html
@@ -4,7 +4,7 @@
   <div class="divisoria"></div>
   <div class="infos">
     <span class="tipo-conta">Conta corrente</span>
-    <span class="saldo">{{ 2500 | currency:"BRL" }}</span>
+    <span class="saldo">{{ saldo() | currency:"BRL" }}</span>
   </div>
 
 </section>
