--- a/src/app/componentes/nova-transacao/nova-transacao.component.html
+++ b/src/app/componentes/nova-transacao/nova-transacao.component.html
@@ -12,8 +12,11 @@
                   [(ngModel)] = "tipoTransacao"
                   required>
             <option value="" selected disabled>Selecione o tipo de transação</option>
-            <option value="deposito">Depósito</option>
-            <option value="saque">Saque</option>
+
+            @for (tipo of TipoTransacaoEnum | keyvalue; track tipo.key) {
+              <option [value]="tipo.value">{{ tipo.value }}</option>
+            }
+
           </select>
         </div>
       </label>
