--- a/src/app/componentes/extrato/extrato.component.html
+++ b/src/app/componentes/extrato/extrato.component.html
@@ -1,5 +1,11 @@
-<section class="container-extrato">
-  <h2 class="titulo-extrato">Extrato</h2>
+<aside class="extrato">
+  <h2 class="titulo">Extrato</h2>
 
-  
-</section>
+  <ul class="transacoes">
+    @for (transacao of transacoes(); track transacao.id) {
+      <li>
+        <app-transacao [transacao]="transacao" ></app-transacao>
+      </li>
+    } @empty { <li aria-hidden="true">Ainda não há transações.</li> }
+  </ul>
+</aside>
